--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ keyboard = "^0.13.5"
 keyboard-listener = "^0.0.7"
 keyboard-extended = "^0.0.0"
 Pillow = "^9.4.0"
+fontstyle = "^1.0.1"
+playsound = "^1.3.0"
+pydub = "^0.25.1"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
